Issue #188 Broken layout of setup screen (#191)
* Fixed the broken layout of the setup screen.

* Fixed the indentation.

close #188

--- a/openam-server-only/src/main/webapp/assets/css/style.css
+++ b/openam-server-only/src/main/webapp/assets/css/style.css
@@ -562,6 +562,9 @@ div.borderPopUpGray{
     /* border: 1px solid #0094d4; */
     border: 1px solid #0094d4;
     border-bottom: none;
+    box-sizing: border-box;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 input.text, input[type="text"], input[type="checkbox"] {
     padding: 2px;
